@@ -1,6 +1,10 @@
 Changes since version 2.0.0
 ---------------------------
 
+- Added support for Ice::Connection, which is accessible to servants
+  from Ice::Current, and to clients from the proxy operation
+  ice_connection.
+
 - Added setDefaultContext() and getDefaultContext() to
   the Ice::Communicator interface. This allows a default context
   to be established on a communicator-wide basis. See section
